# MCCDAQ

./: LICENSE  Mapper.py  README.md  aimccdaq.py  aimccdaq_map.py  pyproject.toml  untitled0.py
E1608/: E1608.py  __init__.py
MCCDAQ/: DataAcquisition.py  E1608.py  MCCDAQ.py  aimccdaq.py  aimccdaq_multichan.py  aimccdaq_multichan_threading.py  untitled0.py  works.py
MCCDAQ_E1608/: MCCDAQ.py  __init__.py
data_files/: data_2024-03-28_14-21-21.csv  data_2024-04-08_13-54-49.csv  data_2024-04-08_15-28-15.csv  data_2024-04-08_15-28-47.csv  data_2024-04-08_15-30-06.csv  data_2024-04-08_15-32-29.csv  data_2024-04-08_15-33-20.csv  data_2024-04-08_15-34-23.csv  data_2024-04-08_15-40-41.csv  data_2024-04-08_15-40-50.csv  data_2024-04-08_16-06-32.csv  data_2024-04-09_14-51-41.csv
test/: data_2024-03-24_23-38-55.csv  data_2024-03-24_23-40-37.csv  data_2024-03-24_23-41-44.csv  data_2024-03-24_23-42-08.csv
