[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MCCDAQ_E1608"
version = '0.1.0'
authors  = [{name="Maedeh Lavvaf", email="mdhlvf@gmail.com" }]
description = "Python API for MCCDAQ devices used by the TUCAN collaboration."
readme = "README.md"
classifiers = [
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "License :: OSI Approved :: MIT License",
        "Operating System :: POSIX :: Linux",
]
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = [
    'time',
    'csv',
    'mcculw',
    'logging',
    'threading',
    'datetime',
    'numpy',
    'matplotlib',
    'pandas',
    'scipy',
    'ctypes',
    'sys',
    'os',
    'mccul.enum',
]

[project.urls]
"Homepage" = "https://github.com/mlavvaf/MCCDAQ"
"Bug Tracker" = "https://github.com/mlavvaf/MCCDAQ/issues"
